--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <title>Tegel Consulting</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Convergence" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
